# ranger_mini_v2

./: .gitattributes  .gitignore  ReadMe.md
doc/: libmotor-driver-2.0.20230801_amd64.deb  robot_description.xml  robot_description_gazebo.urdf
src/bdrive_hardware_interface/: CMakeLists.txt  bdrive_hardware_interface.xml  package.xml
src/bdrive_hardware_interface/include/bdrive_hardware_interface/: bdrive_hardware_interface.hpp  bdrive_helper.h  visibility_control.hpp
src/bdrive_hardware_interface/src/: bdrive_hardware_interface.cpp  bdrive_helper.cpp
src/four_wheel_steering_controller/: CMakeLists.txt  package.xml
src/four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steering_controller.hpp  odometry.hpp  speed_limiter.hpp  visibility_control.h
src/four_wheel_steering_controller/src/: four_wheel_steering_controller.cpp  odometry.cpp  speed_limiter.cpp
src/four_wheel_steering_controller/test/config/: controllers.yaml  four_wheel_steering_controller.yaml
src/four_wheel_steering_hardware_interface/: CMakeLists.txt  four_wheel_steering_hardware_interface.xml  package.xml
src/four_wheel_steering_hardware_interface/include/four_wheel_steering_hardware_interface/: diff_drive_helper.h  four_wheel_steering_drive_helper.h  four_wheel_steering_hardware_interface.hpp  odrive_usb.hpp  visibility_control.hpp
src/four_wheel_steering_hardware_interface/src/: diff_drive_helper.cpp  four_wheel_steering_drive_helper.cpp  four_wheel_steering_hardware_interface.cpp  odrive_usb.cpp
src/four_wheel_steering_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/four_wheel_steering_msgs/msg/: FourWheelSteeringStamped.msg
src/ranger_mini_control/: CMakeLists.txt  package.xml
src/ranger_mini_control/config/: controller.yaml
src/ranger_mini_v2/: CMakeLists.txt  model.config  package.xml  ranger_mini_v2.sdf
src/ranger_mini_v2/config/: controllers.yaml  controllers0.yaml  controllers_real.yaml
src/ranger_mini_v2/launch/: display.launch.py
src/ranger_mini_v2_gazebo/: CMakeLists.txt  package.xml
src/ranger_mini_v2_gazebo/launch/: display_real.launch.py  display_xacro.launch.py  four_ws_control.launch.py  ranger_mini_v2_empty_world.launch.py  ranger_mini_v2_sim.launch.py  robot_sim.launch.py  robot_state_publisher.launch.py
src/ranger_mini_v2_gazebo/models/ranger_mini_v2/: ranger_mini_v2.sdf
src/ranger_mini_v2_gazebo/models/rs_robot/: rs_robot.sdf
src/ranger_mini_v2_gazebo/models/rs_robot/config/: controllers.yaml
src/ranger_mini_v2_gazebo/models/rs_robot/meshes/STL/base/: base_link_old.stl
src/ranger_mini_v2_gazebo/models/rs_robot/meshes/STL/suspension/: FRONT_LEFT_LINKSTL.stl  FRONT_RIGHT_LINKSTL.stl  REAR_LEFT_LINKSTL.stl  REAR_RIGHT_LINKSTL.stl
src/ranger_mini_v2_gazebo/rviz/: display.rviz  display_real.rviz
src/ranger_mini_v2_gazebo/scripts/: robot_control.py
src/ranger_mini_v2_gazebo/urdf/: rs_robot.urdf
src/ranger_mini_v2_gazebo/worlds/: 4ws_world.model  ranger_mini_v2.world  ranger_mini_v2_world.model
src/ranger_mini_v2_gazebo/xacro/: ranger_mini_gazebo.sdf  ranger_mini_gazebo.urdf  ranger_mini_gazebo.xacro  ranger_mini_real.xacro
