<package format="3">
  <name>four_wheel_steering_msgs</name>
  <version>2.0.1</version>
  <description>
    ROS messages for robots using FourWheelSteering.
  </description>
  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>
  <author email="vincentrou@gmail.com">Vincent Rousseau</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/four_wheel_steering_msgs</url>
  <url type="repository">https://github.com/ros-drivers/four_wheel_steering_msgs.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/four_wheel_steering_msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
